Version 2024.12.0

This release introduces several long-awaited features releated to document operations such as:
- Assemble: Rearrange, select, and remove specific pages within a document.
- Merge: Combine multiple PDF files into a single document.
- Add Attachments: Embed additional files (such as text or images) as attachments within the PDF.
- Underlay and Overlay: Apply other PDF as a background (underlay) or foreground (overlay) to another, adding layered content.
- Linearize: Optimize files for fast web viewing, allowing compatible PDF readers to display the document before it’s fully downloaded.
- Encrypt with Access Restrictions: Secure PDFs with user and owner passwords, applying access controls (like permissions for printing, filling forms, extracting or modifying content).

These features are built using the qpdf library, available under the "Apache-2.0" license.
The qpdf library is available at: https://github.com/qpdf/qpdf
We extend our thanks to the authors of qpdf for their contributions to the open-source community.


Further improvements:
- Adjusted the default path for loading font files to prevent rare application hangs in certain environments
- Performance optimization: improved scalability by limiting the maximum level of parallelism
- Performance optimization for legacy .NET Framework: collect stack trace only when running with the Companion App
- TextBlock: slightly reduced memory usage


Version 2024.12.1
- Fixed: The library now provides hints when an additional dependency is required.